[gd_scene load_steps=7 format=3 uid="uid://b1b4n0u0bw78c"]

[ext_resource type="Script" uid="uid://b6utbhypq6x4s" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="Script" uid="uid://couw105c3bde4" path="res://addons/godot_state_charts/state_chart.gd" id="2_0xm2m"]
[ext_resource type="PackedScene" uid="uid://cfj0nu4ulw2yg" path="res://source/UI/dispatch_panel.tscn" id="2_7mycd"]
[ext_resource type="Script" uid="uid://jk2jm1g6q853" path="res://addons/godot_state_charts/compound_state.gd" id="3_h2yge"]
[ext_resource type="Script" uid="uid://cytafq8i1y8qm" path="res://addons/godot_state_charts/atomic_state.gd" id="4_1bvp3"]
[ext_resource type="Script" uid="uid://cf1nsco3w0mf6" path="res://addons/godot_state_charts/transition.gd" id="5_lquwl"]

[node name="Main" type="Node2D"]
script = ExtResource("1_0xm2m")

[node name="UILayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true
layer = 128

[node name="DispatchPanel" parent="UILayer" instance=ExtResource("2_7mycd")]
mouse_filter = 2

[node name="StateChart" type="Node" parent="."]
process_mode = 3
script = ExtResource("2_0xm2m")
metadata/_custom_type_script = "uid://couw105c3bde4"

[node name="Root" type="Node" parent="StateChart"]
script = ExtResource("3_h2yge")
initial_state = NodePath("Menu")
metadata/_custom_type_script = "uid://jk2jm1g6q853"

[node name="Menu" type="Node" parent="StateChart/Root"]
script = ExtResource("4_1bvp3")
metadata/_custom_type_script = "uid://cytafq8i1y8qm"

[node name="ToChooseCharacter" type="Node" parent="StateChart/Root/Menu"]
script = ExtResource("5_lquwl")
to = NodePath("../../ChooseCharacter")
event = &"to_choose_character"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://cf1nsco3w0mf6"

[node name="ToSetting" type="Node" parent="StateChart/Root/Menu"]
script = ExtResource("5_lquwl")
to = NodePath("../../Setting")
event = &"to_setting"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://cf1nsco3w0mf6"

[node name="ToRank" type="Node" parent="StateChart/Root/Menu"]
script = ExtResource("5_lquwl")
to = NodePath("../../Rank")
event = &"to_rank"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://cf1nsco3w0mf6"

[node name="ToAchievement" type="Node" parent="StateChart/Root/Menu"]
script = ExtResource("5_lquwl")
to = NodePath("../../Achievement")
event = &"to_achievement"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://cf1nsco3w0mf6"

[node name="Setting" type="Node" parent="StateChart/Root"]
script = ExtResource("4_1bvp3")
metadata/_custom_type_script = "uid://cytafq8i1y8qm"

[node name="ToMenu" type="Node" parent="StateChart/Root/Setting"]
script = ExtResource("5_lquwl")
to = NodePath("../../Menu")
event = &"to_menu"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://cf1nsco3w0mf6"

[node name="ChooseCharacter" type="Node" parent="StateChart/Root"]
script = ExtResource("4_1bvp3")
metadata/_custom_type_script = "uid://cytafq8i1y8qm"

[node name="ToChooseLevel" type="Node" parent="StateChart/Root/ChooseCharacter"]
script = ExtResource("5_lquwl")
to = NodePath("../../ChooseLevel")
event = &"to_choose_level"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://cf1nsco3w0mf6"

[node name="ToMenu" type="Node" parent="StateChart/Root/ChooseCharacter"]
script = ExtResource("5_lquwl")
to = NodePath("../../Menu")
event = &"to_menu"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://cf1nsco3w0mf6"

[node name="ChooseLevel" type="Node" parent="StateChart/Root"]
script = ExtResource("4_1bvp3")
metadata/_custom_type_script = "uid://cytafq8i1y8qm"

[node name="ToMenu" type="Node" parent="StateChart/Root/ChooseLevel"]
script = ExtResource("5_lquwl")
to = NodePath("../../Menu")
event = &"to_menu"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://cf1nsco3w0mf6"

[node name="ToGame" type="Node" parent="StateChart/Root/ChooseLevel"]
script = ExtResource("5_lquwl")
to = NodePath("../../Game")
event = &"to_game"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://cf1nsco3w0mf6"

[node name="ToChooseCharacter" type="Node" parent="StateChart/Root/ChooseLevel"]
script = ExtResource("5_lquwl")
to = NodePath("../../ChooseCharacter")
event = &"to_choose_character"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://cf1nsco3w0mf6"

[node name="Rank" type="Node" parent="StateChart/Root"]
script = ExtResource("4_1bvp3")
metadata/_custom_type_script = "uid://cytafq8i1y8qm"

[node name="ToMenu" type="Node" parent="StateChart/Root/Rank"]
script = ExtResource("5_lquwl")
to = NodePath("../../Menu")
event = &"to_menu"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://cf1nsco3w0mf6"

[node name="ToGame" type="Node" parent="StateChart/Root/Rank"]
script = ExtResource("5_lquwl")
to = NodePath("../../Game")
event = &"to_game"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://cf1nsco3w0mf6"

[node name="Achievement" type="Node" parent="StateChart/Root"]
script = ExtResource("4_1bvp3")
metadata/_custom_type_script = "uid://cytafq8i1y8qm"

[node name="ToMenu" type="Node" parent="StateChart/Root/Achievement"]
script = ExtResource("5_lquwl")
to = NodePath("../../Menu")
event = &"to_menu"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://cf1nsco3w0mf6"

[node name="Game" type="Node" parent="StateChart/Root"]
script = ExtResource("4_1bvp3")
metadata/_custom_type_script = "uid://cytafq8i1y8qm"

[node name="ToChooseLevel" type="Node" parent="StateChart/Root/Game"]
script = ExtResource("5_lquwl")
to = NodePath("../../ChooseLevel")
event = &"to_choose_level"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://cf1nsco3w0mf6"

[node name="ToGame" type="Node" parent="StateChart/Root/Game"]
script = ExtResource("5_lquwl")
to = NodePath("..")
event = &"to_game"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://cf1nsco3w0mf6"

[connection signal="state_entered" from="StateChart/Root/Menu" to="." method="_on_menu_state_entered"]
[connection signal="state_entered" from="StateChart/Root/Setting" to="." method="_on_setting_state_entered"]
[connection signal="state_entered" from="StateChart/Root/ChooseCharacter" to="." method="_on_choose_character_state_entered"]
[connection signal="state_entered" from="StateChart/Root/ChooseLevel" to="." method="_on_choose_level_state_entered"]
[connection signal="state_entered" from="StateChart/Root/Rank" to="." method="_on_rank_state_entered"]
[connection signal="state_entered" from="StateChart/Root/Achievement" to="." method="_on_achievement_state_entered"]
[connection signal="state_entered" from="StateChart/Root/Game" to="." method="_on_game_state_entered"]
[connection signal="state_exited" from="StateChart/Root/Game" to="." method="_on_game_state_exited"]
[connection signal="state_processing" from="StateChart/Root/Game" to="." method="_on_game_state_processing"]
